Fixing bug 42109 - make sure to set the current item to something sane when it's deleted.  r=hyatt.